<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name" description="Name of the application [CHAR_LIMIT=25]">
    Ping Point
  </string>

    <string name="inference_mode_title" description="Title text displayed on the button when inference mode is on [CHAR_LIMIT=10]">
    Track
  </string>
    <string name="capture_mode_title" description="Title text displayed on the button when capture mode is on [CHAR_LIMIT=10]">
    Configure
  </string>

    <string name="train_action" description="Text displayed on the button that the user clicks to start model training [CHAR_LIMIT=6]">
    Train
  </string>
    <string name="pause_action" description="Text displayed on the button that the user clicks to pause model training [CHAR_LIMIT=6]">
    Pause
  </string>
    <string name="resume_action" description="Text displayed on the button that the user clicks to resume model training [CHAR_LIMIT=6]">
    Resume
  </string>

    <string name="switch_to_inference_hint" description="Hint message telling that the user can switch to the inference mode [CHAR_LIMIT=100]">
    You can switch to inference mode now. Pause training so that inference can start.
  </string>

    <string name="help_button_title" description="Help button text [CHAR_LIMIT=5]">
    Help?
  </string>

    <string name="email">0</string>
    <string name="password">1</string>
    <string name="confirm_password">2</string>
    <string name="full_name">3</string>
    <string name="phone">4</string>
    <string name="company_name">5</string>
    <string name="company_email">6</string>
    <string name="company_address">7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
